Reconfigure Firebase for `jenyus` Hosting site and Gatsby static site

--- a/.firebaserc
+++ b/.firebaserc
@@ -1,5 +1,14 @@
 {
   "projects": {
     "default": "landing-page-97297"
+  },
+  "targets": {
+    "landing-page-97297": {
+      "hosting": {
+        "main": [
+          "jenyus"
+        ]
+      }
+    }
   }
 }
