--- a/firebase.json
+++ b/firebase.json
@@ -1,16 +1,11 @@
 {
   "hosting": {
     "public": "dist",
+    "target": "main",
     "ignore": [
       "firebase.json",
       "**/.*",
       "**/node_modules/**"
-    ],
-    "rewrites": [
-      {
-        "source": "**",
-        "destination": "/index.html"
-      }
     ]
   }
 }
