--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "@mdx-js/mdx": "^1.6.22",
     "@mdx-js/react": "^1.6.22",
     "dotenv": "^8.2.0",
+    "fontsource-maven-pro": "^4.0.0",
+    "fontsource-russo-one": "^4.0.0",
     "gatsby": "^2.31.1",
     "gatsby-image": "^2.11.0",
     "gatsby-plugin-manifest": "^2.12.0",
