--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   "dependencies": {
     "@mdx-js/mdx": "^1.6.22",
     "@mdx-js/react": "^1.6.22",
+    "clsx": "^1.1.1",
     "dotenv": "^8.2.0",
     "fontsource-maven-pro": "^4.0.0",
     "fontsource-russo-one": "^4.0.0",
