--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "dotenv": "^8.2.0",
     "fontsource-maven-pro": "^4.0.0",
     "fontsource-russo-one": "^4.0.0",
+    "framer-motion": "^3.3.0",
     "gatsby": "^2.31.1",
     "gatsby-image": "^2.11.0",
     "gatsby-plugin-manifest": "^2.12.0",
