--- a/package.json
+++ b/package.json
@@ -33,11 +33,13 @@
     "@researchgate/react-intersection-observer": "^1.3.5",
     "clsx": "^1.1.1",
     "dotenv": "^8.2.0",
+    "firebase": "^8.2.6",
     "fontsource-maven-pro": "^4.0.0",
     "fontsource-russo-one": "^4.0.0",
     "framer-motion": "^3.3.0",
     "gatsby": "^2.31.1",
     "gatsby-image": "^2.11.0",
+    "gatsby-plugin-firebase": "^0.2.0-beta.4",
     "gatsby-plugin-manifest": "^2.12.0",
     "gatsby-plugin-mdx": "^1.10.0",
     "gatsby-plugin-offline": "^3.10.0",
