--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "build:tailwind": "cross-env NODE_ENV=production postcss build src/styles/tailwind.css -o static/styles/tailwind.css"
   },
   "dependencies": {
+    "@deckdeckgo/highlight-code": "^2.5.0",
     "@mdx-js/mdx": "^1.6.22",
     "@mdx-js/react": "^1.6.22",
     "@researchgate/react-intersection-observer": "^1.3.5",
@@ -49,12 +50,16 @@
     "gatsby-plugin-sass": "^3.2.0",
     "gatsby-plugin-sharp": "^2.14.1",
     "gatsby-plugin-sitemap": "^3.0.0",
+    "gatsby-remark-highlight-code": "^2.2.0",
+    "gatsby-remark-images": "^4.0.0",
     "gatsby-source-filesystem": "^2.11.0",
+    "gatsby-transformer-remark": "^3.0.0",
     "gatsby-transformer-sharp": "^2.12.0",
     "postcss": "^8.2.5",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-helmet": "^6.1.0",
+    "react-icons": "^4.2.0",
     "sass": "^1.32.6"
   },
   "devDependencies": {
