--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "gatsby": "^2.31.1",
     "gatsby-image": "^2.11.0",
     "gatsby-plugin-firebase": "^0.2.0-beta.4",
+    "gatsby-plugin-google-gtag": "^3.0.0",
     "gatsby-plugin-manifest": "^2.12.0",
     "gatsby-plugin-mdx": "^1.10.0",
     "gatsby-plugin-offline": "^3.10.0",
