--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@deckdeckgo/highlight-code": "^2.5.0",
     "@mdx-js/mdx": "^1.6.22",
     "@mdx-js/react": "^1.6.22",
+    "@reach/router": "^1.3.4",
     "@researchgate/react-intersection-observer": "^1.3.5",
     "clsx": "^1.1.1",
     "dotenv": "^8.2.0",
@@ -57,6 +58,7 @@
     "gatsby-transformer-remark": "^3.0.0",
     "gatsby-transformer-sharp": "^2.12.0",
     "postcss": "^8.2.5",
+    "query-string": "^6.14.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-helmet": "^6.1.0",
